fixed room list headers on mobile

--- a/public/bootstrap/less/menu.less
+++ b/public/bootstrap/less/menu.less
@@ -334,14 +334,6 @@
       }
     }
   }
-
-  @media @mobile {
-    .menu-list__item {
-      .menu-list__header {
-        margin-left: 0;
-      }
-    }
-  }
 }
 
 .menu-actions {
